# smolofis

./: .gitignore  LICENSE  README.md
.github/workflows/: build-iso.yml
config/docker/: docker-compose.yml
config/network/: avahi-daemon.conf  wired-auto.nmconnection
config/network/avahi-services/: smolofis-panel.service
config/systemd/: smolofis-infrastructure.service  smolofis-panel.service
scripts/: build-css.sh  build-image.sh  dev-mock.sh  smoke-test-iso.sh  smolofis-firstboot.sh
scripts/dev/: docker-compose.dev.yml
src-dashboard/: Cargo.toml  tailwind.config.js
src-dashboard/assets/: app.css  fonts.css  input.css  tailwind.css
src-dashboard/src/: config.rs  handlers.rs  main.rs  system.rs
src-dashboard/templates/: dashboard.html
