[package]
name = "smolofis-panel"
version = "0.1.0"
edition = "2021"
description = "SmolOfis appliance control plane: instant-boot dashboard for the on-prem dev hub"
license = "MIT"
publish = false

# Standalone workspace root so the panel builds independently of anything
# else that may land in this repository later.
[workspace]

[dependencies]
anyhow = "1"
askama = "0.16"
axum = "0.8.9"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.39.3"
tokio = { version = "1.38", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Appliance binary: optimize for a small, fully static, fast-starting image.
[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
